median of 2 array and aggressive cows

--- a/Binary Search/1.BinarySearchQestions.md
+++ b/Binary Search/1.BinarySearchQestions.md
@@ -1,3 +1,6 @@
 1. [[540.Search Single Element in a sorted array]]
 2. [[Find nth root of m]]
 3. [[Median in a row-wise sorted Matrix]]
+4. [[4. Median of Two Sorted Arrays]]
+5. [[Aggressive Cows]]
+6. [[33. Search in Rotated Sorted Array]]
