Started String questions

--- a/Binary Search/1.BinarySearchQestions.md
+++ b/Binary Search/1.BinarySearchQestions.md
@@ -4,3 +4,4 @@
 4. [[4. Median of Two Sorted Arrays]]
 5. [[Aggressive Cows]]
 6. [[33. Search in Rotated Sorted Array]]
+7. [[Allocate Minimum Pages]]
