--- a/Strings/151. Reverse Words in a String.md
+++ b/Strings/151. Reverse Words in a String.md
@@ -86,14 +86,11 @@ class Solution {
 
 • **Step 3:**  
  → Set `j = i` to mark the end of the current word.  
- → Move `j` left until a space or start of string is found → this identifies the word boundaries.
+ → Move `i` left until a space or start of string is found → this identifies the word boundaries.
 
 • **Step 4:**  
- → Append the current word from `s[j+1]` to `s[i]` into the `StringBuilder`.  
+ → Append the current word from `s[i+1]` to `s[j]` into the `StringBuilder`.  
  → Add a space after the word for separation.
-
-• **Step 5:**  
- → Update `i = j` to move before the current word and continue processing the next one.
 
 • **Step 6:**  
  → Once all words are processed, return `sb.toString().trim()` to remove any trailing space.
@@ -110,14 +107,12 @@ class Solution {
             if (i < 0) break;             // End of string reached
             
             int j = i;
-            // Step 2: Move j to the beginning of the current word
-            while (j >= 0 && s.charAt(j) != ' ') j--;
+            // Step 2: Move i to the beginning of the current word
+            while (i >= 0 && s.charAt(i) != ' ') i--;
             
-            // Step 3: Append the current word (from j+1 to i)
-            sb.append(s, j + 1, i + 1).append(' ');
+            // Step 3: Append the current word (from i+1 to j)
+            sb.append(s, i + 1, j + 1).append(' ');
             
-            // Step 4: Move i to the character before this word to continue
-            i = j;
         }
         
         // Step 5: Trim any trailing space and return the result
