Longest Palindrome Optimal Solution

--- a/Strings/5. Longest Palindromic Substring.md
+++ b/Strings/5. Longest Palindromic Substring.md
@@ -90,3 +90,81 @@ class Solution {
 }
 
 ```
+
+
+---
+
+# Optimal Approach:- 
+
+### **Function:** `longestPalindrome(String s)`
+
+• **Step 1:**  
+ → Initialize variables:  
+  – `start` and `end` to store the beginning and end indices of the longest palindrome found.
+
+• **Step 2:**  
+ → Loop through each index `i` in the string.  
+ → Treat each index as the **center** of a possible palindrome.
+
+  – Call `expandFromCenter(s, i, i)` → checks for **odd-length** palindromes (single character center).  
+  – Call `expandFromCenter(s, i, i + 1)` → checks for **even-length** palindromes (two-character center).
+
+ → Take the longer result between the two as `maxLen`.
+
+• **Step 3:**  
+ → If the found palindrome is longer than the previous one (`end - start < maxLen`):  
+  – Update `start = i - (maxLen - 1) / 2`.  
+  – Update `end = i + maxLen / 2`.
+
+• **Step 4:**  
+ → After checking all centers, return `s.substring(start, end + 1)` as the **longest palindrome**.
+
+###  **Helper Function:** `expandFromCenter(String s, int left, int right)`
+
+• **Goal:**  
+ → Expand around the given center (`left`, `right`) while characters on both sides are equal.  
+ → Stop when characters differ or go out of bounds.  
+ → Return the **length of the palindrome** found (`right - left - 1`).
+
+
+```java
+class Solution {
+    public String longestPalindrome(String s) {
+        int len = s.length();
+        int start = 0, end = 0; // store the start and end indices of the longest palindrome found
+
+        // Loop through each character, treating it as the center of a possible palindrome
+        for (int i = 0; i < len; i++) {
+            // Case 1: Odd length palindrome (center at one character)
+            int odd = expandFromCenter(s, i, i);
+
+            // Case 2: Even length palindrome (center between two characters)
+            int even = expandFromCenter(s, i, i + 1);
+
+            // Take the larger palindrome length
+            int maxLen = Math.max(odd, even);
+
+            // If we found a longer palindrome, update start and end indices
+            if (end - start < maxLen) {
+                start = i - (maxLen - 1) / 2; // move left pointer correctly
+                end = i + maxLen / 2;         // move right pointer correctly
+            }
+        }
+
+        // Extract and return the longest palindromic substring
+        return s.substring(start, end + 1);
+    }
+
+    // Helper function: expand around the center and return palindrome length
+    public int expandFromCenter(String s, int left, int right) {
+        // Expand while characters on both sides match
+        while (left >= 0 && right < s.length() && s.charAt(left) == s.charAt(right)) {
+            left--;
+            right++;
+        }
+        // Return length of the palindrome found
+        return right - left - 1;
+    }
+}
+
+```
