--- a/Tree/1.TREE.md
+++ b/Tree/1.TREE.md
@@ -1,3 +1,5 @@
 1. [[Morris  Inorder Traversal]]
 2. [[Morris  Preorder Traversal]]
 3. [[Binary Tree Right Side View]]
+4. [[Level Order Traversal (BFS)]]
+5. [[Binary Tree Zigzag Level Order Traversal]]
