--- a/Tree/1.TREE.md
+++ b/Tree/1.TREE.md
@@ -3,3 +3,5 @@
 3. [[Binary Tree Right Side View]]
 4. [[Level Order Traversal (BFS)]]
 5. [[Binary Tree Zigzag Level Order Traversal]]
+6. [[Top View of  Binary tree]]
+7. [[Bottom view of binary tree]]
