root to leaf path

--- a/DSA/Tree/1.TREE.md
+++ b/DSA/Tree/1.TREE.md
@@ -5,3 +5,6 @@
 5. [[Binary Tree Zigzag Level Order Traversal]]
 6. [[Top View of  Binary tree]]
 7. [[Bottom view of binary tree]]
+8. [[Vertical Order Traveral]]
+9. [[Pre, Post, Inorder in one traversal]]
+10. [[Root to leaf path]]
