--- a/DSA/Tree/1.TREE.md
+++ b/DSA/Tree/1.TREE.md
@@ -8,3 +8,5 @@
 8. [[Vertical Order Traveral]]
 9. [[Pre, Post, Inorder in one traversal]]
 10. [[Root to leaf path]]
+11. [[Construct Binary Search Tree from Preorder Traversal]]
+12. [[is Validate Binary Search Tree]]
