more tree questions

--- a/DSA/Tree/1.TREE.md
+++ b/DSA/Tree/1.TREE.md
@@ -10,3 +10,7 @@
 10. [[Root to leaf path]]
 11. [[Construct Binary Search Tree from Preorder Traversal]]
 12. [[is Validate Binary Search Tree]]
+13. [[Height of binary tree]]
+14. [[Calculate the Diameter of a Binary Tree]]
+15. [[SAME TREE]]
+16. [[Balanced Binary Tree]]
