tree LCA and revised 3sum

--- a/DSA/Tree/1.TREE.md
+++ b/DSA/Tree/1.TREE.md
@@ -14,3 +14,4 @@
 14. [[Calculate the Diameter of a Binary Tree]]
 15. [[SAME TREE]]
 16. [[Balanced Binary Tree]]
+17. [[Lowest Common Ancestor (LCA)]]
