--- a/DSA/Tree/1.TREE.md
+++ b/DSA/Tree/1.TREE.md
@@ -15,3 +15,7 @@
 15. [[SAME TREE]]
 16. [[Balanced Binary Tree]]
 17. [[Lowest Common Ancestor (LCA)]]
+18. [[Tree Boundary Traversal]]
+19. [[Maximum Width of Binary Tree]]
+20. [[Floor in BST]]
+21. [[Binary Tree Maximum Path Sum]]
